# merlin

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEVELOPMENT_ROADMAP.md  Dockerfile  PHASE_2_SUMMARY.md  README.md  SPEC_KIT.md  capabilities.toml  features.json  merlin.toml  output.txt
.claude/: SLASH_COMMANDS.md  claude.md  settings.local.json
.github/workflows/: ci.yml
.opencode/agent/: README.md  automation.md  ci-optimizer.md  configuration-validator.md  cross-platform-tester.md  debug.md  documentation-maintainer.md  security-auditor.md
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
ci/: go.mod  main.go
config/: performance.toml
docker/: README.md
docs/: MODEL_ROUTING.md
docs/systemd/: README.md
examples/: model_selection_demo.rs
k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  network-policy.yaml  prometheus-config.yaml  secret.yaml  service.yaml  serviceaccount.yaml
k8s/grafana-dashboards/: dashboard.json
memory/: constitution.md
scripts/: install-systemd.sh
scripts/backup/: README.md  backup.sh  restore.sh
scripts/deploy/: security-scan.sh  validate-security.sh
scripts/disaster-recovery/: README.md  dr-plan.yaml  failover.sh
specs/: README.md
specs/001-begin-working-on/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-systemd-service/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/003-ensure-merlin-has/: spec.md
specs/004-prefer-hardened-docker/: data-model.md  plan.md  quickstart.md  research.md  (+2 more)
src/: lib.rs  main.rs  main_docker.rs  model_selector.rs  server.rs
systemd/: USER_PERMISSIONS.md  merlin.conf  merlin.env  merlin.service
templates/: README.md  plan.md  spec.md  tasks.md
tests/: debug_models_test.rs  feature_integration_test.rs  integration_tests.rs  model_selection_tests.rs  preferences_api_test.rs  priority1_features_test.rs  spec_kit_tests.rs
(+142 files in other folders)
