[package]
name = "merlin"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # Add this
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
tower = "0.4"
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
rand = "0.8"
rand_distr = "0.4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
futures = "0.3"
toml = "0.8"
thiserror = "1.0"

[dev-dependencies]
mockall = "0.11"
tokio-test = "0.4"
